adapt to new log statements and use standard JAVA_HOME